<resources>
    <string name="app_name">Asteroides</string>
    <string name="Preferencias_name">Configuración</string>
    <string name="AcercaDe_name">Acerca de</string>
    <string name="Arrancar">" Jugar"</string>
    <string name="Configurar">Configurar</string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="AcercaDe_texto1">Este juego está inspirado en Asteroids, un popular videojuego
        de Arcade basado en vectores y lanzado en 1979 por Atari.</string>
    <string name="AcercaDe_texto2">Fue uno de los juegos más populares de la época dorada de los
        videojuegosArcade.</string>
    <string name="AcercaDe_texto3">El objetivo del juego es disparar y destruir asteroides evitando
        chocar contra los fragmentos de estos.</string>
</resources>
