<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvAsteroides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp" />
    <Button
        android:id="@+id/btnJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarJuego"
        android:text="@string/Arrancar" />

    <Button
        android:id="@+id/btnConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="configurar"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/btnPuntuaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="puntuacions"
        android:text="@string/Puntuaciones" />
    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="acercaDe"
        android:text="@string/Acercade" />
    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/Salir" />
</LinearLayout>